# geo-kernel-extract

./: .gitignore  CALCULATOR_PARAMETER_API.md  CLAUDE.md  CMakeLists.txt  EXTRACTION_ORDER.md  FEEDBACK.md  GEOMETRIC_KERNEL_CATALOGUE.md  KNOWN_BUGS.md  OBJECT_MODEL.md  PATTERNS.md  README.md  TENTATIVE_OUTSTANDING_ISSUES.md  ongoing_8_finished_audit.md  proposed_outline_draft.md  udp_listen.py
analysis-speculative/: COMPUTE_BUDGET.md  EFG_GEOMETRY_DOMINANCE.md  INVESTIGATION_LAYERS.md  README.md  SCOPE.md  SIGNALS.md  THESIS_ARC.md
build-forensic/: nmr-viewer
calibration/: populate.py
data/: calculator_params.toml  eeq_d4_reference.toml
deploy/: setup_scan.sh
doc/: ARCHITECTURE.md
fileformat/: CMakeLists.txt  DISCREPANCIES.md  README.md  analysis_file.cpp  analysis_file.h  npy_cross_validate.py  roundtrip_test.cpp  roundtrip_write.cpp
h5-reader/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  launch_reader.ps1  launch_reader.sh  udp_listen.py
learn/: AGENT_REVIEW_20260406.md  ARGUMENT.md  CALIBRATION_CHECKLIST.md  CLAUDE.md  EXPERIMENTS.md  EXTRACTOR_DESIGN.md  JOURNAL.md  delta.py  extract.py  features.py  load.py  mopac_extract.py  t2_residual.py
papers/: README.md
protonation/: BUILDER_AGENT_PROMPT.md  README.md
python/: API.md  pyproject.toml
python/doc/: catalog.rst  conf.py  groups.rst  index.rst  ring.rst  tensors.rst  trajectory.rst
python/nmr_extract/: __init__.py  _catalog.py  _protein.py  _ring.py  _tensors.py  _trajectory.py  _types.py
python/tests/: _topology_fixture.py  test_atom_nom_consistency.py  test_category_info_sdk.py  test_energy_time_series_h5_reader.py  test_larsen_hbond_group.py  test_load.py  test_topology_sidecar.py  test_tripeptide_group.py  test_water_field_h5_reader.py  test_welford_h5_reader.py
references/: ANNOTATED_BIBLIOGRAPHY.md  PENDING_ACQUISITIONS.md
references-meta/: INDEX.md  TICKLERS.md  WORKFLOW.md  agarwal-1977-ring-currents-local-anisotropy-paracyclophane-keywords.txt  agarwal-1977-ring-currents-local-anisotropy-paracyclophane-summary.txt  bankestad-2023-carbohydrate-equivariant-gnn-shifts-summary-qwen-test.draft.txt  bankestad-2023-carbohydrate-equivariant-gnn-shifts-summary-qwen-test.reasoning.txt  bankestad-2023-carbohydrate-equivariant-gnn-shifts-summary-qwen-test.txt  ben-mahmoud-2024-gnn-solid-state-nmr-spherical-tensors-summary-qwen-test.draft.txt  ben-mahmoud-2024-gnn-solid-state-nmr-spherical-tensors-summary-qwen-test.reasoning.txt  ben-mahmoud-2024-gnn-solid-state-nmr-spherical-tensors-summary-qwen-test.txt  boyd-skrynnikov-2002-ring-current-chemical-shielding-anisotropy-keywords.txt  boyd-skrynnikov-2002-ring-current-chemical-shielding-anisotropy-summary.txt  bratholm-2017-procs15-qm-chemical-shielding-refinement-summary-qwen-test.reasoning.txt  bratholm-2017-procs15-qm-chemical-shielding-refinement-summary-qwen-test.txt  bryant-1983-nmr-time-scale-keywords.txt  bryant-1983-nmr-time-scale-summary.txt  buckingham-1960-chemical-shifts-polar-groups-keywords.txt  buckingham-1960-chemical-shifts-polar-groups-summary.txt  case-1995-ring-current-calibration-keywords.txt  case-1995-ring-current-calibration-summary-qwen-test.draft.txt  case-1995-ring-current-calibration-summary-qwen-test.reasoning.txt  case-1995-ring-current-calibration-summary-qwen-test.txt  case-1995-ring-current-calibration-summary.txt  cavender-gilson-2025-livecoms-protein-benchmark-datasets-summary-qwen-test.draft.txt  cavender-gilson-2025-livecoms-protein-benchmark-datasets-summary-qwen-test.reasoning.txt  cavender-gilson-2025-livecoms-protein-benchmark-datasets-summary-qwen-test.txt  corso-2024-graph-neural-networks-primer-summary-qwen-test.reasoning.txt  corso-2024-graph-neural-networks-primer-summary-qwen-test.txt  de-gortari-2010-time-averaging-nmr-chemical-shifts-mlf-peptide-keywords.txt  de-gortari-2010-time-averaging-nmr-chemical-shifts-mlf-peptide-summary.txt  facelli-2011-chemical-shift-tensors-theory-application-keywords.txt  facelli-2011-chemical-shift-tensors-theory-application-summary.txt  gadanecz-perczel-2026-edmd-cs-restraints-summary-qwen-test.draft.txt  gadanecz-perczel-2026-edmd-cs-restraints-summary-qwen-test.reasoning.txt  gadanecz-perczel-2026-edmd-cs-restraints-summary-qwen-test.txt  geiger-smidt-2022-e3nn-euclidean-neural-networks-summary-qwen-test.reasoning.txt  geiger-smidt-2022-e3nn-euclidean-neural-networks-summary-qwen-test.txt  gershoni-poranne-stanger-2015-magnetic-criteria-aromaticity-keywords.txt  gershoni-poranne-stanger-2015-magnetic-criteria-aromaticity-summary.txt  (+90 more)
scripts/: batch_extract.sh  dump_tripeptide_orderings.py  fetch_ccd.sh  perceive_larsen_tripeptide.py  run_with_cuda_env.sh
site/: architecture.html  build.sh  cli.html  diagram-calculator-pipeline.html  diagram-geometry-choice.html  diagram-protein-model.html  diagram-provenance-paths.html  index.html  kernels.html
spec/: ANALYSIS_TRAJECTORY_2026-04-14.md  BUILDER_AND_PIPELINE_SPEC.md  CATEGORICAL_ANALYSIS_PASS1.md  CONSTITUTION.md  DEPENDENCIES.md  DEPENDENCY_ANALYSIS.md  DESIGN_BRIEF_DRAFT_1.md  DIAGNOSTICS_AND_WORKFLOWS_2026-05-09.md  DIRECTORY_SET.md  ENSEMBLE_MODEL.md  EVIL_STRING_AUDIT_2026-04-28.md  EXTRACTION_SDK.md  FIX_TESTS.md  IDENTITY_AND_DYNAMICS_ROLLUP_2026-04-22.md  INDEX.md  I_O_AND_SCHEMA_2026-05-09.md  LAYER0_PLAN.md  LOADING_IMPLEMENTATION.md  MATHS_GOALS.md  MICROSECOND_MD_HARVESTER_2026-04-22.md  NMR_EXTRACT_DESIDERATA_2026-04-22.md  OUTSTANDING_GROMACS_PATH.md  PARAMETERISATION_CAMPAIGN.md  PHYSICS_FOUNDATIONS.md  PLANNED_CALCULATORS_2026-04-22.md  PLANNED_CALCULATORS_TIME_SERIES_2026-04-24.md  POLARISABILITY_ROADMAP_2026-04-13.md  REWRITE_DECISIONS.md  RING_OBJECT_MODEL_PROPOSAL.md  SESSION_MOPAC_INTEGRATION.md  SESSION_STATE_20260412.md  TEST_FRAMEWORK.md  TIMING_4876_ATOMS.md  TRAJECTORY_EXTRACTION.md  TRAJECTORY_LANDING_STATE_2026-04-23.md  TRAJECTORY_REFACTOR_GAPS_2026-04-23.md  TRAJECTORY_RESULT_PLAN_2026-04-24.md  TRAJECTORY_WRITE_SURFACE_2026-04-24.md  UNIFICATION_BUGS.md  USE_CASES.md  (+4 more)
src/: .clangd  (+285 more)
tools/topology/: CMakeLists.txt  README.md  build_semantic_tables.cpp
(+2717 files in other folders)
